--- a/Solution/pom.xml
+++ b/Solution/pom.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.acme</groupId>
   <artifactId>solution</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>iar</packaging>
+  
+  <repositories>
+    <repository>
+      <!-- supplies portal artifacts -->
+      <id>axon</id>
+      <url>https://repo.axonivy.rocks</url>
+    </repository>
+  </repositories>
+  
+  <dependencies>
+    <dependency>
+      <groupId>ch.ivyteam.ivy.project.portal</groupId>
+      <artifactId>portalTemplate</artifactId>
+      <version>[7.4.177.0,)</version>
+      <type>iar</type>
+    </dependency>
+  </dependencies>
+  
   <build>
     <plugins>
       <plugin>
@@ -15,7 +31,6 @@
         <artifactId>project-build-plugin</artifactId>
         <version>7.4.0</version>
         <extensions>true</extensions>
-
         <executions>
           <execution>
             <id>deploy.to.development.server</id>
@@ -26,12 +41,11 @@
             <configuration>
               <deployMethod>HTTP</deployMethod>
               <deployEngineUrl>http://localhost:8080/ivy</deployEngineUrl>
-              <deployToEngineApplication>mySolution</deployToEngineApplication>
+              <deployToEngineApplication>demo-portal</deployToEngineApplication>
               <deployServerId>axonivy.engine.local</deployServerId>
             </configuration>
           </execution>
         </executions>
-
       </plugin>
     </plugins>
   </build>
