--- a/SolutionTest/pom.xml
+++ b/SolutionTest/pom.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.acme</groupId>
   <artifactId>solution-test</artifactId>
@@ -13,8 +15,16 @@
       <version>[1.0.0-SNAPSHOT,)</version>
       <type>iar</type>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.5.2</version>
+    </dependency>
   </dependencies>
   <build>
+    <!-- let maven (and especially 'surefire' know where your tests live!) -->
+    <testSourceDirectory>src</testSourceDirectory>
+  
     <plugins>
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
